Important fix typo assigment -> assignment
